--- a/i3.config
+++ b/i3.config
@@ -29,8 +29,7 @@ floating_modifier $mod
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:hack 11
-
+font pango: Noto Sans 10
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -52,9 +51,10 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
  set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +3% && $refresh_i3status [ $current -lt 100 ]
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -3% && $refresh_i3statusu#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym $mod+F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +3% && $refresh_i3status [ $current -lt 100 ]
+bindsym $mod+F1 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -3% && $refresh_i3statusu#
+#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym $mod+F3 exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 
 
@@ -64,10 +64,10 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-#bindsym $mod+XF86AudioPlay exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+#bindsym $mod+F8 exec playerctl play-pause
+bindsym $mod+F4 exec playerctl play-pause
+bindsym $mod+F6 exec playerctl next
+bindsym $mod+F5 exec playerctl previous
 
 #for apps
 bindsym $mod+p exec firefox --force-device-scale-factor=1.5
@@ -78,9 +78,9 @@ bindsym $mod+o exec pcmanfm
 set $bgcolor #14141D
 set $border #8aa600
 # class                 border  backgr. text    indicator child_border
-client.focused          #ff0000 #14141D #3DBABE #000000   #ff0000
+client.focused          #ff0000 #14141D #3DBABE #19346e   #19346e
 client.focused_inactive #000000 #222222 #3DBABE #000000   #000000
-client.unfocused        #000000 #222222 #888888 #292d2e   #000000
+client.unfocused        #000000 #222222 #888888 #000000   #000000
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #ffffff #0c0c0c #ffffff #000000   #0c0c0c
 
@@ -193,6 +193,10 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+#sleep
+#bindsym $mod+Shift+x exec systemctl susped
+
+
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -235,23 +239,32 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 2%-
 #AUTO START
 #nitrogen
 exec_always  nitrogen --restore
-exec_always --no-startup-id vibrantLinux 
+##authentication agent ##
+exec_always --no-startup-id   /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+##kde-connect##
+exec --no-startup-id /usr/lib/kdeconnectd
+##dunst##
+exec --no-startup-id dunst
+
+
 
 #extra keybinding
-bindsym $mod+x exec /home/user/.config/scripts/lock
-
+bindsym $mod+Shift+x exec /home/userman/.config/scripts/lock & systemctl suspend
+bindsym $mod+x exec /home/userman/.config/scripts/lock
 
 #assigning workspaces
 for_window [class="firefox"] move to workspace $ws2
-for_window [class="Spotify"] move to workspace $ws3
-for_window [class="Pcmanfm"] move to workspace $ws5
-for_window [class="Zathura"] move to workspace $ws4
+for_window [class="Spotify"] move to workspace $ws6
+for_window [class="Pcmanfm"] move to workspace $ws4
+for_window [class="Zathura"] move to workspace $ws3
+for_window [class="firefox"] border none
+
 
 #window compositor
-exec_always --no-startup-id "picom  --config /home/user/.config/picom/picom.conf --experimental-backend --backend glx"
+exec_always --no-startup-id "picom  --config /home/userman/.config/picom/picom.conf --experimental-backend --backend glx"
 
 #polybar launch 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id /home/userman/.config/polybar/launch.sh
 
 gaps inner 10
 gaps outer 0
@@ -259,8 +272,8 @@ smart_gaps on
 
 
 # Screenshots
-bindsym Print exec --no-startup-id maim "/home/user/picss/screenshots/$(date)"
-bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)"
+bindsym Print exec --no-startup-id maim "/home/userman/pictures/screenshots/$(date).png"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/pictures/screenshots$(date).png"
 bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)"
 
 ## Clipboard Screenshots
@@ -268,5 +281,8 @@ bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t ima
 bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 
+##bluetoothctl script ###
+bindsym $mod+Ctrl+b exec /home/userman/.local/bin/hedphone
 
-
+##hDMI o/p ##
+exec --no-startup-id  xrandr --output "eDP-1" --auto --output "HDMI-1" --same-as "eDP-1"
